using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace TestTaskProject
{
    public class Constans
    {
        public const string PLAYER_TAG = "Player";


        

        public class DoorAnimator
        {
            public const string OPEN_DOOR_TRIGGER = "OpenDoor";
            public const string CLOSE_DOOR_TRIGGER = "CloseDoor";
        }

        public class PlayerAnimator
        {
            public const string IS_RUN_BOOLEAN = "IsRun";
            public const string IS_FALL_BOOLEAN = "IsFall";
            public const string INTERACT_TRIGGER = "Interact";
            public const string JUMP_TRIGGER = "Jump";
        }
    }
}
